--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+.DS_Store
+.java-version
+
+.gradle
+gradlew
+gradlew.bat
+
+build
